# xLog

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark.cpp
build_support/: packages.sh
src/: CMakeLists.txt  xLog.cpp  xLog_imple.cpp
src/include/: config.h  types.h  util.h  xLog.h  xLog_imple.h  xLog_middle.h
test/: CMakeLists.txt
test/basic_test/: basic_test.cpp  basic_xlog_test.cpp
