# reference to the CMU Database Group

file(GLOB XLOG_TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/*/*test.cpp")

# valgrind
find_program(VALGRIND_BIN valgrind)
if ("${VALGRIND_BIN}" STREQUAL "VALGRIND_BIN-NOTFOUND")
    message(WARNING "xLog/test couldn't find valgrind.")
else()
    message(STATUS "xLog/test found valgrind at ${VALGRIND_BIN}")
endif()

set(VALGRIND_OPTIONS
        --error-exitcode=1                      # if leaks are detected, return nonzero value
        # --gen-suppressions=all  # uncomment for leak suppression syntax
        --leak-check=full                       # detailed leak information
        --soname-synonyms=somalloc=*jemalloc*   # also intercept jemalloc
        --trace-children=yes                    # trace child processes
        --track-origins=yes                     # track origin of uninitialized values
        )
set(VALGRIND_SUPPRESSIONS_FILE "${PROJECT_SOURCE_DIR}/build_support/valgrind.supp")


##########################################
# "make XYZ_test"
##########################################
foreach (xLog_test_source ${XLOG_TEST_SOURCES})
    # Create a human readable name.
    get_filename_component(xLog_test_filename ${xLog_test_source} NAME)
    string(REPLACE ".cpp" "" xLog_test_name ${xLog_test_filename})

    # Add the test target separately and as part of "make check-tests".
    add_executable(${xLog_test_name} EXCLUDE_FROM_ALL ${xLog_test_source})

    target_link_libraries(${xLog_test_name} xLog_shared gtest gmock_main)

    # Set test target properties and dependencies.
    set_target_properties(${xLog_test_name}
        PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
        COMMAND ${xLog_test_name}
    )

    # Add the test under CTest.
    add_test(${xLog_test_name} ${VALGRIND_BIN} ${VALGRIND_OPTIONS}
    --suppressions=${VALGRIND_SUPPRESSIONS_FILE} ${CMAKE_BINARY_DIR}/test/${xLog_test_name}
    --gtest_color=yes --gtest_output=xml:${CMAKE_BINARY_DIR}/test/unit_${test_name}.xml)
    add_test(${xLog_test_name} ${CMAKE_BINARY_DIR}/test/${xLog_test_name} --gtest_color=yes
            --gtest_output=xml:${CMAKE_BINARY_DIR}/test/${xLog_test_name}.xml)
endforeach(xLog_test_source ${XLOG_TEST_SOURCES})